[package]
name = "nano_services"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
crossbeam-channel = "0.5.6"
futures = "0.3.24"
my_macro = { path = "my_macro" }
tokio = { version = "1.21.2", features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
