[package]
name = "my_macro"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["proc-macro"]

[dependencies]
convert_case = "0.6.0"
crossbeam-channel = "0.5.6"
quote = "1.0.21"
syn = { version = "1.0.101", features = ["full", "extra-traits", "fold"] }
